package adapter

import (
	"context"
	"crypto/sha256"
	"hash"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"github.com/tetratelabs/wazero/api"
	"google.golang.org/grpc"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
// WASMAdapterå‰©ä½™è¦†ç›–ç‡æµ‹è¯• - æé«˜è¦†ç›–ç‡åˆ°80%+
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç°æ›´å¤šå®¿ä¸»å‡½æ•°çš„ç¼ºé™·å’ŒBUGï¼Œæé«˜è¦†ç›–ç‡
//
// ============================================================================

// TestWASMAdapter_AddressBytesToBase58_ConversionFailed æµ‹è¯•åœ°å€è½¬æ¢å¤±è´¥
func TestWASMAdapter_AddressBytesToBase58_ConversionFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	// è®¾ç½®AddressManagerè¿”å›é”™è¯¯
	adapter.addressManager = &mockAddressManagerWithError{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBytesToBase58, ok := functions["address_bytes_to_base58"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	addrPtr := uint32(1024)
	address := make([]byte, 20)
	memory.Write(addrPtr, address)

	resultPtr := uint32(2048)
	maxLen := uint32(100)
	result := addressBytesToBase58(ctx, module, addrPtr, resultPtr, maxLen)
	assert.Equal(t, uint32(0), result, "åœ°å€è½¬æ¢å¤±è´¥åº”è¯¥è¿”å›0")
}

// mockAddressManagerWithError Mockçš„AddressManagerï¼ˆè¿”å›é”™è¯¯ï¼‰
type mockAddressManagerWithError struct{}

func (m *mockAddressManagerWithError) BytesToAddress(bytes []byte) (string, error) {
	return "", assert.AnError
}

func (m *mockAddressManagerWithError) AddressToBytes(address string) ([]byte, error) {
	return nil, assert.AnError
}

func (m *mockAddressManagerWithError) ValidateAddress(address string) (bool, error) {
	return false, assert.AnError
}

func (m *mockAddressManagerWithError) AddressToHexString(address string) (string, error) {
	return "", assert.AnError
}

func (m *mockAddressManagerWithError) HexStringToAddress(hexStr string) (string, error) {
	return "", assert.AnError
}

func (m *mockAddressManagerWithError) CompareAddresses(addr1, addr2 string) (bool, error) {
	return false, assert.AnError
}

func (m *mockAddressManagerWithError) GetAddressType(address string) (crypto.AddressType, error) {
	return crypto.AddressTypeBitcoin, assert.AnError
}

func (m *mockAddressManagerWithError) IsZeroAddress(address string) bool {
	return false
}

func (m *mockAddressManagerWithError) StringToAddress(s string) (string, error) {
	return "", assert.AnError
}

func (m *mockAddressManagerWithError) PrivateKeyToAddress(privateKey []byte) (string, error) {
	return "", assert.AnError
}

func (m *mockAddressManagerWithError) PublicKeyToAddress(publicKey []byte) (string, error) {
	return "", assert.AnError
}

// TestWASMAdapter_AddressBase58ToBytes_NilAddressManager æµ‹è¯•nil AddressManager
func TestWASMAdapter_AddressBase58ToBytes_NilAddressManager(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	adapter.addressManager = nil // è®¾ç½®ä¸ºnil

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBase58ToBytes, ok := functions["address_base58_to_bytes"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	base58Ptr := uint32(1024)
	base58Str := []byte("test-address")
	memory.Write(base58Ptr, base58Str)

	resultPtr := uint32(2048)
	result := addressBase58ToBytes(ctx, module, base58Ptr, uint32(len(base58Str)), resultPtr)
	assert.Equal(t, uint32(0), result, "nil AddressManageråº”è¯¥è¿”å›0")
}

// TestWASMAdapter_AppendTxInput_InvalidTxIDLength æµ‹è¯•æ— æ•ˆtxIDé•¿åº¦
func TestWASMAdapter_AppendTxInput_InvalidTxIDLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	appendTxInput, ok := functions["append_tx_input"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨æ— æ•ˆçš„txIDé•¿åº¦ï¼ˆä¸æ˜¯32å­—èŠ‚ï¼‰
	txIDPtr := uint32(1024)
	txID := make([]byte, 20) // 20å­—èŠ‚ï¼Œä¸æ˜¯32å­—èŠ‚
	memory.Write(txIDPtr, txID)

	result := appendTxInput(ctx, module, txIDPtr, 20, 0, 0, 0, 0)
	assert.Equal(t, uint32(ErrInvalidParameter), result, "æ— æ•ˆtxIDé•¿åº¦åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_AppendTxInput_InvalidProof æµ‹è¯•æ— æ•ˆproof
func TestWASMAdapter_AppendTxInput_InvalidProof(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	appendTxInput, ok := functions["append_tx_input"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	txID := make([]byte, 32)
	memory.Write(txIDPtr, txID)

	// å†™å…¥æ— æ•ˆçš„proofï¼ˆä¸æ˜¯æœ‰æ•ˆçš„protobufï¼‰
	proofPtr := uint32(2048)
	invalidProof := []byte("invalid-protobuf")
	memory.Write(proofPtr, invalidProof)

	result := appendTxInput(ctx, module, txIDPtr, 32, 0, 1, proofPtr, uint32(len(invalidProof)))
	assert.Equal(t, uint32(ErrEncodingFailed), result, "æ— æ•ˆproofåº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_GetBlockHash_NilBlockQuery æµ‹è¯•nil blockQuery
func TestWASMAdapter_GetBlockHash_NilBlockQuery(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	adapter.blockQuery = nil // è®¾ç½®ä¸ºnil

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getBlockHash, ok := functions["get_block_hash"].(func(context.Context, api.Module, uint64, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	hashPtr := uint32(1024)
	result := getBlockHash(ctx, module, 100, hashPtr)
	assert.Equal(t, uint32(0), result, "nil blockQueryåº”è¯¥è¿”å›0")
}

// TestWASMAdapter_GetBlockHash_InvalidHashLength æµ‹è¯•å“ˆå¸Œé•¿åº¦æ— æ•ˆ
func TestWASMAdapter_GetBlockHash_InvalidHashLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	// è®¾ç½®hashManagerè¿”å›é32å­—èŠ‚çš„å“ˆå¸Œ
	adapter.blockQuery = &mockBlockQuery{}
	adapter.hashManager = &mockHashManagerWithInvalidLength{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getBlockHash, ok := functions["get_block_hash"].(func(context.Context, api.Module, uint64, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	hashPtr := uint32(1024)
	result := getBlockHash(ctx, module, 100, hashPtr)
	assert.Equal(t, uint32(0), result, "æ— æ•ˆå“ˆå¸Œé•¿åº¦åº”è¯¥è¿”å›0")
}

// mockHashManagerWithInvalidLength Mockçš„HashManagerï¼ˆè¿”å›æ— æ•ˆé•¿åº¦çš„å“ˆå¸Œï¼‰
type mockHashManagerWithInvalidLength struct{}

func (m *mockHashManagerWithInvalidLength) SHA256(data []byte) []byte {
	return make([]byte, 20) // è¿”å›20å­—èŠ‚ï¼Œä¸æ˜¯32å­—èŠ‚
}

func (m *mockHashManagerWithInvalidLength) Keccak256(data []byte) []byte {
	return make([]byte, 20) // è¿”å›20å­—èŠ‚ï¼Œä¸æ˜¯32å­—èŠ‚
}

func (m *mockHashManagerWithInvalidLength) DoubleSHA256(data []byte) []byte {
	return make([]byte, 20) // è¿”å›20å­—èŠ‚ï¼Œä¸æ˜¯32å­—èŠ‚
}

func (m *mockHashManagerWithInvalidLength) Hash160(data []byte) []byte {
	return make([]byte, 20)
}

func (m *mockHashManagerWithInvalidLength) RIPEMD160(data []byte) []byte {
	return make([]byte, 20)
}

func (m *mockHashManagerWithInvalidLength) NewSHA256Hasher() hash.Hash {
	return sha256.New()
}

func (m *mockHashManagerWithInvalidLength) NewRIPEMD160Hasher() hash.Hash {
	return sha256.New() // ç®€åŒ–å®ç°
}

// TestWASMAdapter_GetTransactionID_NilTx æµ‹è¯•get_transaction_id nil Tx
func TestWASMAdapter_GetTransactionID_NilTx(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.draftID = "draft-123"
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}
	adapter.draftService = &mockDraftServiceForAdapterWithNilTx{}
	adapter.txHashClient = &mockTxHashServiceClientForAdapter{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getTxID, ok := functions["get_transaction_id"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	result := getTxID(ctx, module, txIDPtr)
	assert.Equal(t, uint32(ErrInternalError), result, "nil Txåº”è¯¥è¿”å›é”™è¯¯")
}

// mockDraftServiceForAdapterWithNilTx Mockçš„DraftServiceï¼ˆè¿”å›nil Txçš„draftï¼‰
type mockDraftServiceForAdapterWithNilTx struct{}

func (m *mockDraftServiceForAdapterWithNilTx) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	return &types.DraftTx{Tx: nil}, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return &types.DraftTx{Tx: nil}, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftServiceForAdapterWithNilTx) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return &types.DraftTx{Tx: nil}, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftServiceForAdapterWithNilTx) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	return nil, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) DeleteDraft(ctx context.Context, draftID string) error {
	return nil
}

func (m *mockDraftServiceForAdapterWithNilTx) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapterWithNilTx) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	return 0, nil
}

// TestWASMAdapter_GetTransactionID_InvalidHashLength æµ‹è¯•get_transaction_idæ— æ•ˆå“ˆå¸Œé•¿åº¦
func TestWASMAdapter_GetTransactionID_InvalidHashLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.draftID = "draft-123"
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}
	adapter.draftService = &mockDraftServiceForAdapter{}
	adapter.txHashClient = &mockTxHashServiceClientForAdapterWithInvalidHash{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getTxID, ok := functions["get_transaction_id"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	result := getTxID(ctx, module, txIDPtr)
	assert.Equal(t, uint32(ErrInternalError), result, "æ— æ•ˆå“ˆå¸Œé•¿åº¦åº”è¯¥è¿”å›é”™è¯¯")
}

// mockTxHashServiceClientForAdapterWithInvalidHash Mockçš„TransactionHashServiceClientï¼ˆè¿”å›æ— æ•ˆé•¿åº¦çš„å“ˆå¸Œï¼‰
type mockTxHashServiceClientForAdapterWithInvalidHash struct{}

func (m *mockTxHashServiceClientForAdapterWithInvalidHash) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	return &transaction.ComputeHashResponse{
		Hash:    make([]byte, 20), // è¿”å›20å­—èŠ‚ï¼Œä¸æ˜¯32å­—èŠ‚
		IsValid: true,
	}, nil
}

func (m *mockTxHashServiceClientForAdapterWithInvalidHash) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{IsValid: true}, nil
}

func (m *mockTxHashServiceClientForAdapterWithInvalidHash) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	return &transaction.ComputeSignatureHashResponse{Hash: make([]byte, 32)}, nil
}

func (m *mockTxHashServiceClientForAdapterWithInvalidHash) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{IsValid: true}, nil
}

// TestWASMAdapter_GetTransactionID_WriteFailed æµ‹è¯•get_transaction_idå†™å…¥å¤±è´¥
func TestWASMAdapter_GetTransactionID_WriteFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.draftID = "draft-123"
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}
	adapter.draftService = &mockDraftServiceForAdapter{}
	adapter.txHashClient = &mockTxHashServiceClientForAdapter{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getTxID, ok := functions["get_transaction_id"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	txIDPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := getTxID(ctx, module, txIDPtr)
	assert.Equal(t, uint32(ErrMemoryAccessFailed), result, "å†™å…¥å¤±è´¥åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_AddressBytesToBase58_ReadFailed æµ‹è¯•è¯»å–åœ°å€å¤±è´¥
func TestWASMAdapter_AddressBytesToBase58_ReadFailed(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithAddressManager(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBytesToBase58, ok := functions["address_bytes_to_base58"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	addrPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	resultPtr := uint32(2048)
	maxLen := uint32(100)
	result := addressBytesToBase58(ctx, module, addrPtr, resultPtr, maxLen)
	assert.Equal(t, uint32(0), result, "è¯»å–åœ°å€å¤±è´¥åº”è¯¥è¿”å›0")
}

// TestWASMAdapter_AddressBase58ToBytes_ReadFailed æµ‹è¯•è¯»å–Base58å­—ç¬¦ä¸²å¤±è´¥
func TestWASMAdapter_AddressBase58ToBytes_ReadFailed(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithAddressManager(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBase58ToBytes, ok := functions["address_base58_to_bytes"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	base58Ptr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	resultPtr := uint32(2048)
	result := addressBase58ToBytes(ctx, module, base58Ptr, 10, resultPtr)
	assert.Equal(t, uint32(0), result, "è¯»å–Base58å­—ç¬¦ä¸²å¤±è´¥åº”è¯¥è¿”å›0")
}

// TestWASMAdapter_AddressBase58ToBytes_InvalidLength æµ‹è¯•è§£ç åé•¿åº¦æ— æ•ˆ
func TestWASMAdapter_AddressBase58ToBytes_InvalidLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	// è®¾ç½®AddressManagerè¿”å›é20å­—èŠ‚çš„åœ°å€
	adapter.addressManager = &mockAddressManagerWithInvalidLength{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBase58ToBytes, ok := functions["address_base58_to_bytes"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	base58Ptr := uint32(1024)
	base58Str := []byte("test-address")
	memory.Write(base58Ptr, base58Str)

	resultPtr := uint32(2048)
	result := addressBase58ToBytes(ctx, module, base58Ptr, uint32(len(base58Str)), resultPtr)
	assert.Equal(t, uint32(0), result, "æ— æ•ˆé•¿åº¦åº”è¯¥è¿”å›0")
}

// mockAddressManagerWithInvalidLength Mockçš„AddressManagerï¼ˆè¿”å›æ— æ•ˆé•¿åº¦çš„åœ°å€ï¼‰
type mockAddressManagerWithInvalidLength struct{}

func (m *mockAddressManagerWithInvalidLength) BytesToAddress(bytes []byte) (string, error) {
	return "test-address", nil
}

func (m *mockAddressManagerWithInvalidLength) AddressToBytes(address string) ([]byte, error) {
	return make([]byte, 19), nil // è¿”å›19å­—èŠ‚ï¼Œä¸æ˜¯20å­—èŠ‚
}

func (m *mockAddressManagerWithInvalidLength) ValidateAddress(address string) (bool, error) {
	return true, nil
}

func (m *mockAddressManagerWithInvalidLength) AddressToHexString(address string) (string, error) {
	return "", nil
}

func (m *mockAddressManagerWithInvalidLength) HexStringToAddress(hexStr string) (string, error) {
	return "", nil
}

func (m *mockAddressManagerWithInvalidLength) CompareAddresses(addr1, addr2 string) (bool, error) {
	return false, nil
}

func (m *mockAddressManagerWithInvalidLength) GetAddressType(address string) (crypto.AddressType, error) {
	return crypto.AddressTypeBitcoin, nil
}

func (m *mockAddressManagerWithInvalidLength) IsZeroAddress(address string) bool {
	return false
}

func (m *mockAddressManagerWithInvalidLength) StringToAddress(s string) (string, error) {
	return "", nil
}

func (m *mockAddressManagerWithInvalidLength) PrivateKeyToAddress(privateKey []byte) (string, error) {
	return "", nil
}

func (m *mockAddressManagerWithInvalidLength) PublicKeyToAddress(publicKey []byte) (string, error) {
	return "", nil
}

// TestWASMAdapter_AddressBase58ToBytes_WriteFailed æµ‹è¯•å†™å…¥å¤±è´¥
func TestWASMAdapter_AddressBase58ToBytes_WriteFailed(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithAddressManager(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBase58ToBytes, ok := functions["address_base58_to_bytes"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	base58Ptr := uint32(1024)
	base58Str := []byte("test-address")
	memory.Write(base58Ptr, base58Str)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	resultPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := addressBase58ToBytes(ctx, module, base58Ptr, uint32(len(base58Str)), resultPtr)
	assert.Equal(t, uint32(0), result, "å†™å…¥å¤±è´¥åº”è¯¥è¿”å›0")
}

// TestWASMAdapter_AddressBytesToBase58_WriteFailed æµ‹è¯•å†™å…¥å¤±è´¥
func TestWASMAdapter_AddressBytesToBase58_WriteFailed(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithAddressManager(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	addressBytesToBase58, ok := functions["address_bytes_to_base58"].(func(context.Context, api.Module, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	addrPtr := uint32(1024)
	address := make([]byte, 20)
	memory.Write(addrPtr, address)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	resultPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	maxLen := uint32(100)
	result := addressBytesToBase58(ctx, module, addrPtr, resultPtr, maxLen)
	assert.Equal(t, uint32(0), result, "å†™å…¥å¤±è´¥åº”è¯¥è¿”å›0")
}

// TestWASMAdapter_AppendTxInput_ReadTxIDFailed æµ‹è¯•è¯»å–txIDå¤±è´¥
func TestWASMAdapter_AppendTxInput_ReadTxIDFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	appendTxInput, ok := functions["append_tx_input"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	txIDPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := appendTxInput(ctx, module, txIDPtr, 32, 0, 0, 0, 0)
	assert.Equal(t, uint32(ErrMemoryAccessFailed), result, "è¯»å–txIDå¤±è´¥åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_AppendTxInput_ReadProofFailed æµ‹è¯•è¯»å–proofå¤±è´¥
func TestWASMAdapter_AppendTxInput_ReadProofFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	appendTxInput, ok := functions["append_tx_input"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	txID := make([]byte, 32)
	memory.Write(txIDPtr, txID)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	proofPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := appendTxInput(ctx, module, txIDPtr, 32, 0, 1, proofPtr, 10)
	assert.Equal(t, uint32(ErrMemoryAccessFailed), result, "è¯»å–proofå¤±è´¥åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_GetBlockHash_WriteFailed æµ‹è¯•å†™å…¥å“ˆå¸Œå¤±è´¥
func TestWASMAdapter_GetBlockHash_WriteFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	adapter.blockQuery = &mockBlockQuery{}
	adapter.hashManager = testutil.NewTestHashManager()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getBlockHash, ok := functions["get_block_hash"].(func(context.Context, api.Module, uint64, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	hashPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := getBlockHash(ctx, module, 100, hashPtr)
	assert.Equal(t, uint32(0), result, "å†™å…¥å“ˆå¸Œå¤±è´¥åº”è¯¥è¿”å›0")
}

// TestWASMAdapter_GetChainID_WriteFailed æµ‹è¯•å†™å…¥é“¾IDå¤±è´¥
func TestWASMAdapter_GetChainID_WriteFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getChainID, ok := functions["get_chain_id"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	chainIDPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := getChainID(ctx, module, chainIDPtr)
	assert.Equal(t, uint32(ErrMemoryAccessFailed), result, "å†™å…¥é“¾IDå¤±è´¥åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_GetContractAddress_WriteFailed æµ‹è¯•å†™å…¥åˆçº¦åœ°å€å¤±è´¥
func TestWASMAdapter_GetContractAddress_WriteFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getContractAddress, ok := functions["get_contract_address"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	addrPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := getContractAddress(ctx, module, addrPtr)
	assert.Equal(t, uint32(ErrMemoryAccessFailed), result, "å†™å…¥åˆçº¦åœ°å€å¤±è´¥åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_GetCaller_InvalidAddressLength æµ‹è¯•get_calleræ— æ•ˆåœ°å€é•¿åº¦
func TestWASMAdapter_GetCaller_InvalidAddressLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.callerAddress = make([]byte, 19) // 19å­—èŠ‚ï¼Œä¸æ˜¯20å­—èŠ‚
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getCaller, ok := functions["get_caller"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	addrPtr := uint32(1024)
	result := getCaller(ctx, module, addrPtr)
	// ğŸ”§ **ä¿®å¤å**ï¼šè¿”å› ErrInvalidAddress è€Œä¸æ˜¯ 0
	assert.Equal(t, uint32(ErrInvalidAddress), result, "æ— æ•ˆåœ°å€é•¿åº¦åº”è¯¥è¿”å› ErrInvalidAddress")
}

// TestWASMAdapter_GetCaller_WriteFailed æµ‹è¯•get_callerå†™å…¥å¤±è´¥
func TestWASMAdapter_GetCaller_WriteFailed(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getCaller, ok := functions["get_caller"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// ä½¿ç”¨ä¸€ä¸ªè¶…å‡ºå†…å­˜èŒƒå›´çš„æŒ‡é’ˆ
	memSize := memory.Size()
	addrPtr := uint32(memSize + 100) // è¶…å‡ºèŒƒå›´

	result := getCaller(ctx, module, addrPtr)
	// ğŸ”§ **ä¿®å¤å**ï¼šè¿”å› ErrInvalidParameterï¼ˆå†…å­˜è¶Šç•Œï¼‰è€Œä¸æ˜¯ 0
	assert.Equal(t, uint32(ErrInvalidParameter), result, "å†…å­˜è¶Šç•Œåº”è¯¥è¿”å› ErrInvalidParameter")
}

// TestWASMAdapter_GetContractAddress_InvalidLength æµ‹è¯•get_contract_addressæ— æ•ˆé•¿åº¦
func TestWASMAdapter_GetContractAddress_InvalidLength(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.contractAddress = make([]byte, 19) // 19å­—èŠ‚ï¼Œä¸æ˜¯20å­—èŠ‚
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getContractAddress, ok := functions["get_contract_address"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	addrPtr := uint32(1024)
	result := getContractAddress(ctx, module, addrPtr)
	assert.Equal(t, uint32(ErrInvalidAddress), result, "æ— æ•ˆåœ°å€é•¿åº¦åº”è¯¥è¿”å›é”™è¯¯")
}

