package hostabi

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"

	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
// host_build_transaction.go è¦†ç›–ç‡æå‡æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šæé«˜è¦†ç›–ç‡ï¼Œå‘ç°æœªè¦†ç›–çš„ä»£ç è·¯å¾„ä¸­çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestApplyDelegationLock_GetDraftError æµ‹è¯•è·å–Drafté”™è¯¯
func TestApplyDelegationLock_GetDraftError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		getDraftError: assert.AnError,
	}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
		AuthorizedOperations: []string{"transfer"},
		ExpiryDurationBlocks: 100,
		MaxValuePerOperation: "1000",
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "è·å–Draftå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyDelegationLock_InvalidOriginalOwnerLength æµ‹è¯•æ— æ•ˆåŸå§‹æ‰€æœ‰è€…åœ°å€é•¿åº¦
func TestApplyDelegationLock_InvalidOriginalOwnerLength(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "invalid", // é•¿åº¦ä¸è¶³
		AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
		AuthorizedOperations: []string{"transfer"},
		MaxValuePerOperation: "1000",
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "original_owneråœ°å€é•¿åº¦é”™è¯¯", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyDelegationLock_InvalidDelegateLength æµ‹è¯•æ— æ•ˆå§”æ‰˜è€…åœ°å€é•¿åº¦
func TestApplyDelegationLock_InvalidDelegateLength(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		AllowedDelegates:     []string{"invalid"}, // é•¿åº¦ä¸è¶³
		AuthorizedOperations: []string{"transfer"},
		MaxValuePerOperation: "1000",
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "allowed_delegateåœ°å€é•¿åº¦é”™è¯¯", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyDelegationLock_InvalidMaxValue æµ‹è¯•æ— æ•ˆæœ€å¤§é‡‘é¢
func TestApplyDelegationLock_InvalidMaxValue(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
		AuthorizedOperations: []string{"transfer"},
		MaxValuePerOperation: "invalid", // æ— æ•ˆé‡‘é¢
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "è§£æmax_value_per_operationå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyDelegationLock_WithExpiryAndPolicy æµ‹è¯•å¸¦è¿‡æœŸæ—¶é—´å’Œç­–ç•¥çš„å§”æ‰˜é”å®š
func TestApplyDelegationLock_WithExpiryAndPolicy(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
		AuthorizedOperations: []string{"transfer"},
		ExpiryDurationBlocks: 100,
		MaxValuePerOperation: "1000",
		DelegationPolicy:     "test_policy",
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸåº”ç”¨å§”æ‰˜é”å®š")
	assert.Equal(t, 1, mockTxAdapter.getDraftCallCount, "åº”è¯¥è°ƒç”¨GetDraft")
}

// TestApplyDelegationLock_NoAssetOutputs æµ‹è¯•æ²¡æœ‰Assetè¾“å‡ºçš„æƒ…å†µ
func TestApplyDelegationLock_NoAssetOutputs(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_Resource{
							Resource: &pb.ResourceOutput{},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	callerAddress := make([]byte, 20)
	params := &DelegationParams{
		OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
		AuthorizedOperations: []string{"transfer"},
		MaxValuePerOperation: "1000",
	}

	err := applyDelegationLock(ctx, mockTxAdapter, callerAddress, 1, params, 100)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸï¼ˆæ²¡æœ‰Assetè¾“å‡ºæ—¶ä¸ä¼šä¿®æ”¹ï¼‰")
}

// TestApplyThresholdLock_GetDraftError æµ‹è¯•è·å–Drafté”™è¯¯
func TestApplyThresholdLock_GetDraftError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		getDraftError: assert.AnError,
	}
	ctx := context.Background()
	key1 := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	params := &ThresholdParams{
		Threshold:              2,
		TotalParties:           3,
		PartyVerificationKeys:  []string{key1},
		SignatureScheme:       "BLS_THRESHOLD",
		SecurityLevel:          256,
	}

	err := applyThresholdLock(ctx, mockTxAdapter, 1, params)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "è·å–Draftå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyThresholdLock_InvalidKeyDecode æµ‹è¯•æ— æ•ˆå¯†é’¥è§£ç 
func TestApplyThresholdLock_InvalidKeyDecode(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	params := &ThresholdParams{
		Threshold:              2,
		TotalParties:           3,
		PartyVerificationKeys:  []string{"invalid_hex"}, // æ— æ•ˆåå…­è¿›åˆ¶
		SignatureScheme:       "BLS_THRESHOLD",
		SecurityLevel:          256,
	}

	err := applyThresholdLock(ctx, mockTxAdapter, 1, params)

	// decodeHex å¯¹æ— æ•ˆè¾“å…¥è¿”å›ç©ºæ•°ç»„ï¼Œlen(keyBytes) == 0 ä¼šè§¦å‘é”™è¯¯
	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "party_verification_keyè§£ç å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyThresholdLock_WithPolicy æµ‹è¯•å¸¦ç­–ç•¥çš„é—¨é™é”å®š
func TestApplyThresholdLock_WithPolicy(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	key1 := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	params := &ThresholdParams{
		Threshold:              2,
		TotalParties:           3,
		PartyVerificationKeys:  []string{key1},
		SignatureScheme:       "BLS_THRESHOLD",
		SecurityLevel:          256,
		ThresholdPolicy:       "test_policy",
	}

	err := applyThresholdLock(ctx, mockTxAdapter, 1, params)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸåº”ç”¨é—¨é™é”å®š")
}

// TestApplyThresholdLock_NoAssetOutputs æµ‹è¯•æ²¡æœ‰Assetè¾“å‡ºçš„æƒ…å†µ
func TestApplyThresholdLock_NoAssetOutputs(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		draft: &types.DraftTx{
			DraftID: "draft-123",
			Tx: &pb.Transaction{
				Outputs: []*pb.TxOutput{
					{
						OutputContent: &pb.TxOutput_State{
							State: &pb.StateOutput{},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	key1 := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	params := &ThresholdParams{
		Threshold:              2,
		TotalParties:           3,
		PartyVerificationKeys:  []string{key1},
		SignatureScheme:       "BLS_THRESHOLD",
		SecurityLevel:          256,
	}

	err := applyThresholdLock(ctx, mockTxAdapter, 1, params)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸï¼ˆæ²¡æœ‰Assetè¾“å‡ºæ—¶ä¸ä¼šä¿®æ”¹ï¼‰")
}

// TestHandleDelegatedMode_ComputeHashError æµ‹è¯•è®¡ç®—å“ˆå¸Œé”™è¯¯
func TestHandleDelegatedMode_ComputeHashError(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		err: assert.AnError,
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handleDelegatedMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "failed to compute transaction hash", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandleDelegatedMode_InvalidTransaction æµ‹è¯•æ— æ•ˆäº¤æ˜“ç»“æ„
func TestHandleDelegatedMode_InvalidTransaction(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: false, // äº¤æ˜“ç»“æ„æ— æ•ˆ
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handleDelegatedMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "transaction structure is invalid", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandleThresholdMode_ComputeHashError æµ‹è¯•è®¡ç®—å“ˆå¸Œé”™è¯¯
func TestHandleThresholdMode_ComputeHashError(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		err: assert.AnError,
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handleThresholdMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "failed to compute transaction hash", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandleThresholdMode_InvalidTransaction æµ‹è¯•æ— æ•ˆäº¤æ˜“ç»“æ„
func TestHandleThresholdMode_InvalidTransaction(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: false, // äº¤æ˜“ç»“æ„æ— æ•ˆ
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handleThresholdMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "transaction structure is invalid", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandlePaymasterMode_ComputeHashError æµ‹è¯•è®¡ç®—å“ˆå¸Œé”™è¯¯
func TestHandlePaymasterMode_ComputeHashError(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		err: assert.AnError,
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handlePaymasterMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "failed to compute transaction hash", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandlePaymasterMode_InvalidTransaction æµ‹è¯•æ— æ•ˆäº¤æ˜“ç»“æ„
func TestHandlePaymasterMode_InvalidTransaction(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: false, // äº¤æ˜“ç»“æ„æ— æ•ˆ
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{}

	receipt, err := handlePaymasterMode(ctx, mockTxHashClient, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "transaction structure is invalid", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTxOutputFromSpec_ResourceOutput æµ‹è¯•æ„å»ºèµ„æºè¾“å‡º
func TestBuildTxOutputFromSpec_ResourceOutput(t *testing.T) {
	contentHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	metadataJSON := `{
		"content_hash": "` + contentHashHex + `",
		"category": "wasm",
		"mime_type": "application/wasm"
	}`
	spec := &OutputSpec{
		Type:     "resource",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Metadata: []byte(metadataJSON),
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯èµ„æºè¾“å‡º
	resourceOutput, ok := output.OutputContent.(*pb.TxOutput_Resource)
	assert.True(t, ok, "åº”è¯¥æ˜¯èµ„æºè¾“å‡º")
	assert.NotNil(t, resourceOutput.Resource, "èµ„æºè¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildTxOutputFromSpec_StateOutput æµ‹è¯•æ„å»ºçŠ¶æ€è¾“å‡º
func TestBuildTxOutputFromSpec_StateOutput(t *testing.T) {
	executionResultHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	stateIDHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	metadataJSON := `{
		"state_id": "` + stateIDHex + `",
		"state_version": 1,
		"execution_result_hash": "` + executionResultHashHex + `"
	}`
	spec := &OutputSpec{
		Type:     "state",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Metadata: []byte(metadataJSON),
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯çŠ¶æ€è¾“å‡º
	stateOutput, ok := output.OutputContent.(*pb.TxOutput_State)
	assert.True(t, ok, "åº”è¯¥æ˜¯çŠ¶æ€è¾“å‡º")
	assert.NotNil(t, stateOutput.State, "çŠ¶æ€è¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildTxOutputFromSpec_NilSpec æµ‹è¯•nil spec
func TestBuildTxOutputFromSpec_NilSpec(t *testing.T) {
	output, err := buildTxOutputFromSpec(nil, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "outputSpec ä¸èƒ½ä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_ParseFeeAmountError æµ‹è¯•è§£æè´¹ç”¨é‡‘é¢é”™è¯¯
func TestApplyPaymaster_ParseFeeAmountError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "invalid_amount", // æ— æ•ˆé‡‘é¢
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "è§£æè´¹ç”¨é‡‘é¢å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_NoCachedOutput æµ‹è¯•æ²¡æœ‰ç¼“å­˜è¾“å‡ºçš„UTXO
func TestApplyPaymaster_NoCachedOutput(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				// æ²¡æœ‰CachedOutput
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "é‡‘é¢è¶³å¤Ÿçš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_NoNativeCoin æµ‹è¯•æ²¡æœ‰åŸç”Ÿå¸çš„UTXO
func TestApplyPaymaster_NoNativeCoin(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{
										Amount: "200",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "é‡‘é¢è¶³å¤Ÿçš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_InvalidAmountParse æµ‹è¯•UTXOé‡‘é¢è§£æå¤±è´¥
func TestApplyPaymaster_InvalidAmountParse(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "invalid_amount", // æ— æ•ˆé‡‘é¢
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "é‡‘é¢è¶³å¤Ÿçš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_AddInputError æµ‹è¯•æ·»åŠ è¾“å…¥é”™è¯¯
func TestApplyPaymaster_AddInputError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		addCustomInputError: assert.AnError,
	}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "æ·»åŠ èµåŠ©æ± è¾“å…¥å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_AddOutputError æµ‹è¯•æ·»åŠ è¾“å‡ºé”™è¯¯
func TestApplyPaymaster_AddOutputError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		addCustomOutputError: assert.AnError,
	}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "æ·»åŠ è´¹ç”¨è¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplyPaymaster_NilOutpoint æµ‹è¯•nil Outpoint
func TestApplyPaymaster_NilOutpoint(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: nil, // nil Outpoint
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	params := &PaymasterParams{
		FeeAmount: "100",
	}

	err := applyPaymaster(ctx, mockTxAdapter, mockUTXOQuery, 1, params, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "Outpointä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

